class mv_hpr_app:
    def __init__(self, root):
        self.root = root
